# DevDep

./: README.md  analyse.md  knversation.txt  pyproject.toml  pytest_result.md  requirements.txt
devdep/: .env.example  Dockerfile  __init__.py  docker-compose.yml  documentation.md  init.sh  main.py
devdep/.superpowers/: bootstrap.md
devdep/.superpowers/skills/: SKILL.md  brainstorming.md  finishing.md  subagent-dev.md  tdd.md  writing-plans.md
devdep/.superpowers/workflows/: default.yaml
devdep/superpowers/: __init__.py  __main__.py  gates.py  session.py  skills.py
devdep/tools/: __init__.py  superpowers_tools.py
devdep/workspace/: PLAN.md  REVIEW.md  SPEC.md  auth.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  users.db
devdep/workspace/tests/: conftest.py  test_auth.py  test_auth_unit.py  test_database.py  test_dependencies.py  test_initial_structure.py  test_limiter.py  test_models.py  test_schemas.py  test_users.py
