[project]
name = "devdep"
version = "0.1.0"
description = "Developer Department with Agno Agents and Superpowers Methodology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "openai",
    "python-dotenv",
    "pytest",
    "fastapi",
    "sqlmodel",
    "uvicorn[standard]",
    "mcp>=1.27.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "email-validator",
]

[project.scripts]
superpowers = "devdep.superpowers.__main__:main"

[tool.uv]
package = true
